<resources>
    <string name="app_name">Onboarding</string>
    <string name="keep_calm">Keep Calm</string>
    <string name="feel_less_stressed">Feel less stressed and more mindful with meditation</string>
    <string name="illustration">Illustration</string>
    <string name="next">Next</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="the_mind_is_powerful">The mind is a very powerful thing we possess, and to take care of our minds is of utmost priority.</string>
    <string name="stay_focused">Stay focused</string>
    <string name="maintain_focus">Let\'s maintain your focus by meditating everyday without hassle.</string>
    <string name="get_started">Get started</string>
    <string name="skip"><u>Skip</u></string>
</resources>