<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".OnboardingObjectFragment">

    <ImageView
        android:id="@+id/img_illustration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/illustration"
        android:src="@drawable/img_clock"
        app:layout_constraintBottom_toTopOf="@id/tv_main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_text"
        style="@style/TextStyle.Title"
        android:layout_marginTop="16dp"
        android:text="@string/keep_calm"
        app:layout_constraintBottom_toTopOf="@id/tv_secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_illustration" />

    <TextView
        android:id="@+id/tv_secondary_text"
        style="@style/TextStyle"
        android:layout_marginTop="16dp"
        android:text="@string/feel_less_stressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_text" />

</androidx.constraintlayout.widget.ConstraintLayout>